Mobile side bar slider added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
@@ -85,7 +85,7 @@ h5 {
     .left-panel {
         position: fixed;
         overflow:auto;
-        background: #bba3a3;
+        background: #cac4bd;
         z-index: 9050;
         left: -800px;
         width: 80%;
