--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
@@ -169,7 +169,9 @@
         background-size: 30px 23px;
     }
 }
-
+.navbar-inverse .navbar-toggle:focus{
+    background:none;
+}
 .navbar-collapse {
     margin-top: 5px;
 }
