--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -1,38 +1,53 @@
 ﻿<style>
-    .center-width{
-        position:relative;
+    .center-width {
+        position: relative;
     }
-    .center-width .modal-overlay{
-        min-height: 600px;
-        position:absolute;
-        overflow:hidden;
-    }
-    .menu-container {
-    margin: 5px auto;
-    width: 65%;
-    font-size: 12px;
-    font-family: myriadpro-regular;
-}
-    .menu-container > ul > li > a {
-    color: #6b6868;
-}
 
-    .menu-container > ul > li > a:hover {
-        color: #f7a756;
+        .center-width .modal-overlay {
+            min-height: 600px;
+            position: absolute;
+            overflow: hidden;
+        }
+
+    .menu-container {
+        margin: 5px auto;
+        width: 65%;
+        font-size: 12px;
+        font-family: myriadpro-regular;
     }
+
+        .menu-container > ul > li > a {
+            color: #6b6868;
+        }
+
+            .menu-container > ul > li > a:hover {
+                color: #f7a756;
+            }
+
     .left-panel-list {
-    color: #215ea7;
-    font-size: 14px;
-    list-style:none;
-}
-.left-panel-list li{
-    margin-bottom:5px;
-}
+        color: #215ea7;
+        font-size: 14px;
+        list-style: none;
+    }
+
+        .left-panel-list li {
+            margin-bottom: 5px;
+        }
+
+    .cloe-button {
+        display: block;
+        text-align: right;
+        margin-right: -20px;
+        font-size: 20px;
+    }
 </style>
 <div class="row">
     <div id="toggleMenu" class="left-panel">
+
         <div class="menu-container visible-xs">
-            <button (click)="togglemenu()"> x </button>
+            <div class="cloe-button">
+                <a (click)="hideMenu()"> <i class="fa fa-arrow-left"></i> </a>
+            </div>
             <ul class="left-panel-list">
                 <li class=""><a routerLink="/">Alta Perspectiva</a></li>
                 <li><a routerLink="/question/home/1">Questions</a></li>
@@ -48,7 +63,7 @@
     <div class="right-panel hidden-xs">
         <topfive-user></topfive-user>
     </div>
-    
+
     <div class="center-width">
         <div class="modal-overlay z-modal" *ngIf="isLoading">
             <div class="loader"></div>
@@ -57,7 +72,7 @@
             <question-panel [question]="question"></question-panel>
         </div>
         <!-- For Hover pop up get some space to show -->
-        <div style="height:200px;position:relative;"></div> 
+        <div style="height:200px;position:relative;"></div>
     </div>
 </div>
 
