Nav bar back ground color and text color changed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
@@ -8,7 +8,7 @@
     position: fixed;
     height: 64px;
     min-height: 40px;
-    background-color: rgba(134, 134, 134, 0.64);
+    background-color: rgba(234, 233, 233, 0.64);
     border: none;
 }
 
@@ -19,7 +19,7 @@
 
 .navbar-default .navbar-nav {
     > li > form > a {
-        color: white;
+        color: black;
     }
 }
 
@@ -89,7 +89,7 @@
 }
 
 .navbar-brand {
-    color: white !important;
+    color:black;
     height: 40px;
     padding: 0px 0px;
     margin-left: 5px;
@@ -111,7 +111,7 @@
 
     > li {
         > a {
-            color: white !important;
+            color: black!important;
             padding-top: 10px;
             padding-bottom: 10px;
 
