--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
@@ -1,7 +1,7 @@
 ﻿.nav-user-info{
     margin-top: 16px;
     display: inline-block;
-    color: white;
+    color: black;
     margin-left:5px;
 }
 .user-info {
