akash:css bug fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
@@ -121,9 +121,9 @@
         margin-left: 4px;
     }
 
-    .update-credential {
+    /*.update-credential {
         margin-left: 10px;
-    }
+    }*/
     .profile-image-center .btn {
         color: black;
     }
@@ -161,7 +161,7 @@
 
             <div>
                 <a class="credential-text">{{credential.title}}</a>
-                <a *ngIf="isOwner" (click)="openCredentialDialogBox()" class="update-credential"><span>Update Credential</span> </a>
+                <a *ngIf="isOwner" (click)="openCredentialDialogBox()"><span>Update Credential</span> </a>
             </div>
 
             <div [hidden]="(!showDescription)">
