--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/shared_userinfo.less
@@ -5,7 +5,7 @@
     margin-left:5px;
 }
 .user-info {
-    padding-top: 15px;
+    /*padding-top: 15px;*/
     padding-left:15px;
     float: left;
     display: block;
