Edge  home page gap fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -56,7 +56,7 @@
 <div class="right-panel">
     <category-left-menu [caegoryId]="categoryId"></category-left-menu>
 </div>
-<div class="center-width center-body z-ground">
+<div class="center-width center-body z-ground center-fix">
     <div class="modal-overlay z-modal" *ngIf="loader.isLoading">
         <div class="loader"></div>
     </div>
