--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tab-panel.component.html
@@ -3,12 +3,6 @@
         position: relative;
     }
 
-        .center-width .modal-overlay {
-            min-height: 600px;
-            position: absolute;
-            overflow: hidden;
-        }
-
     .menu-container {
         margin: 5px auto;
         width: 65%;
@@ -64,7 +58,7 @@
         <topfive-user></topfive-user>
     </div>
 
-    <div class="center-width">
+    <div class="center-width center-fix">
         <div class="modal-overlay z-modal" *ngIf="isLoading">
             <div class="loader"></div>
         </div>
