--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -31,6 +31,13 @@
     .row-overflow {
         overflow: visible;
     }
+    #employment-edit{
+        display:none;
+    }
+    #employment:hover #employment-edit{
+        display:inline-block;
+    }
+    
 </style>
 
 
@@ -83,12 +90,12 @@
             </h3>
             <ul class="credential-panel">
                 <li>
-                    <div *ngIf="employmentExists && isOwner">
+                    <div id="employment" *ngIf="employmentExists && isOwner">
                         <div class="mytooltip"><i class="fa fa-suitcase"></i><span class="mytooltiptext">Employment</span></div>
 
 
                         <span title="Employment" innerHTML="{{employmentHtml}}"></span>
-                        <a *ngIf="isOwner" (click)='openEmploymentDialogAnchor()' class='edit'><i class='fa fa-edit'></i></a>
+                        <a *ngIf="isOwner" (click)='openEmploymentDialogAnchor()' id="employment-edit" class='edit'><i class='fa fa-edit'></i></a>
                     </div>
                     <a *ngIf="!employmentExists && isOwner" (click)="openEmploymentDialogAnchor()" class="edit">
                         Add Employment
