Question page responsive style added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
@@ -39,3 +39,14 @@ p {
 .center-fix{
     float:left;
 }
+.body-minHeight {
+            min-height: 100vh;
+        }
+
+/*====For mobile side bar=======*/
+    .cloe-button {
+        display: block;
+        text-align: right;
+        margin-right: -20px;
+        font-size: 20px;
+    }
