--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -1,5 +1,5 @@
 ﻿<div #logginAnchor></div>
-<div [ngClass]="placeBottom"   id="search-box" (click)="handleClick($event)">
+<div [ngClass]="placeBottom" class="search-xs"   id="search-box" (click)="handleClick($event)">
     <div class="center-width" id="adv-search">
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="z-header" role="form" id="search-panel">
             <div class="icon-container">
