--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -139,5 +139,5 @@
         <question-panel [question]="question"></question-panel>
     </div>
     <!-- For Hover pop up get some space to show -->
-    <div style="height:200px;position:relative;"></div>
+    <div class="hidden-xs" style="height:200px;position:relative;"></div>
 </div>
