Profile page responsive style added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
@@ -161,7 +161,7 @@
     <div class="col-md-3">
         <div class="profile-image-center">
             <img class="profile-image" src="{{imageLink}}" />
-            <button type="button" name="documents" class="btn btn-default" (click)="onUploadClick()" *ngIf="isOwner">Upload Image</button>
+            <button type="button" name="documents" class="btn btn-default hidden-xs" (click)="onUploadClick()" *ngIf="isOwner">Upload Image</button>
         </div>
     </div>
     <div class="col-md-9">
