--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-info.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/dashboard_viewprofile_profile-info.less
@@ -1,42 +1,61 @@
-﻿@profile-info-color:#9d9d9b;
-@img-width:120px;
+﻿@profile-info-color: #9d9d9b;
+@img-width: 120px;
+
 .profile-info-container {
-        margin-top:30px;
-    }
+    margin-top: 30px;
+}
 
+.profile-image {
+    height: 120px;
+    width: @img-width;
+    border-radius: 60px;
+    margin-bottom: 10px;
+}
+
+.profile-image-center {
+    width: @img-width;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.profile-info {
+    float: left;
+    font-family: myriadpro-regular;
+    width: 100%;
+}
+
+.profile-info > h1 {
+    font-family: myriadpro-regular;
+}
+
+.profile-info a {
+    display: inline-block;
+    color: @profile-info-color;
+}
+
+.profile-info > ul {
+    margin-top: 40px;
+}
+
+.profile-info > ul > li {
+    list-style: none;
+    float: left;
+    margin-right: 10px;
+}
+
+.profile-info > ul > li > a {
+    color: @profile-info-color;
+}
+
+@media only screen and (max-width:767px) {
     .profile-image {
-        height: 120px;
-        width: @img-width;
-        border-radius: 60px;
-        margin-bottom:10px;
+        height: 60px;
+        width: 60px;
     }
-    .profile-image-center{
-        width: @img-width;
-        margin:0 auto;
+    .profile-info-container{
+        margin:0;
     }
-    .profile-info {
-        float: left;
-        font-family: myriadpro-regular;
-        width:100%;
+    .profile-xs{
+        padding:10px;
     }
-
-        .profile-info > h1 {
-            font-family: myriadpro-regular;
-        }
-
-        .profile-info  a {
-            display: inline-block;
-            color: @profile-info-color;
-        }
-        .profile-info > ul{
-            margin-top:40px;
-        }
-
-        .profile-info > ul > li {
-            list-style: none;
-            float: left;
-            margin-right: 10px;            
-        }
-        .profile-info > ul > li>a{
-            color:@profile-info-color;
-        }
+}
