--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/layout.less
@@ -50,3 +50,9 @@ p {
         margin-right: -20px;
         font-size: 20px;
     }
+    @media only  screen and (max-width:767px){
+        .row{
+            margin-left:0;
+            margin-right:0;
+        }
+    }
