--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/login-modal/login-modal.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/login-modal/login-modal.component.css
@@ -32,3 +32,8 @@
             right:15px;
             font-size: 30px;
         }
+@media only screen and (max-width:767px){
+    .dialog{
+        max-width:95%;
+    }
+}
