--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-status.component.html
@@ -7,10 +7,10 @@
         <div class="status-line like-border"></div>
         <div class="status-line number-box">{{blogPost?.blogViewCount? blogPost?.blogViewCount:0}}</div>
         <div class="status-line">Leidos</div>
-        <div class="status-line number-box">
+        <div class="status-line number-box hidden-xs">
             {{blogPost.comments.length}}
         </div>
-        <a class="status-line" data-toggle="collapse" aria-expanded="false" attr.data-target="#postComment{{blogPost.id}}">Comentarios</a>
+        <a class="status-line hidden-xs" data-toggle="collapse" aria-expanded="false" attr.data-target="#postComment{{blogPost.id}}">Comentarios</a>
 
         <div class="social-icon">
             <a href="https://www.facebook.com/sharer/sharer.php?u={{blogpost?.sharedUrl}}"
