--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-dialog/answer-dialog.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-dialog/answer-dialog.component.css
@@ -1,22 +1,29 @@
-﻿.answer-dialog{
+﻿.answer-dialog {
     margin: 20px auto;
     max-width: 60%;
-    padding:25px;
+    padding: 25px;
 }
 
-    .dialog p{
-        margin-bottom: 10px;
+.dialog p {
+    margin-bottom: 10px;
+}
+
+.dialog header {
+    border-bottom: 1px solid black;
+    font-size: 12px;
+    padding: 5px;
+    display: flex;
+}
+
+    .dialog header .title {
+        flex-grow: 1;
+        cursor: default;
     }
 
-    .dialog header{
-        border-bottom: 1px solid black;
-        font-size: 12px;
+
+@media only screen and (max-width:767px) {
+    .answer-dialog {
+        max-width: 95%;
         padding: 5px;
-        display: flex;
     }
-        .dialog header .title{
-            flex-grow: 1;
-            cursor: default;
-        }
-
-
+}
