--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -18,7 +18,7 @@
 
     <!--==========Right Side=====-->
     <div class="social-icon">
-        <a href="https://www.facebook.com/sharer/sharer.php?u={{questionObj.shareUrl}}"
+        <a href="https://www.facebook.com/sharer/sharer.php?u={{questionObj.shareUrl}}&title={{questionObj?.title}}&description={{answerTagsRemoved}}"
            class="SHARE FACEBOOK"
            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
             <img class="social-image" id="img1" src="../images/facebooklogo.jpg" />
@@ -39,7 +39,7 @@
                 <ul style="list-style-type: none;">
                     <li style="list-style-type: none;width: 100px;">
                         <i class="fa fa-linkedin-square"></i>
-                        <a href="http://www.linkedin.com/shareArticle?mini=true&url={{questionObj.shareUrl}}"
+                        <a href="http://www.linkedin.com/shareArticle?mini=true&url={{questionObj.shareUrl}}&title={{questionObj?.title}}&summary={{answerTagsRemoved}}"
                            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">Linkedin</a>
                     </li>
                     <li style="list-style-type: none;">
