Home page footer social icon link added, Search box space issue  fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿<style>
-    .borrder-circle a, .borrder-circle a:hover{
+    .footer-container a{
         color:white;
+    }
+    .footer-container a:hover{
+        color:wheat;
     }
 </style>
 @model dynamic
@@ -39,20 +42,21 @@ else
                 
             </div>
             <div class="borrder-circle">
-                <i class="fa fa-twitter fa-2x">
-                    <a href="https://twitter.com/AltaPerspectiva"></a>
-                </i>
+                <a href="https://twitter.com/AltaPerspectiva">
+                    <i class="fa fa-twitter fa-2x">
+                    </i>
+                </a>
+                
             </div>
             <div class="borrder-circle">
-                <i class="fa fa-instagram fa-2x">
-                    <a href="https://www.instagram.com/altaperspectiva/"></a>
-                </i>
+                <a href="https://www.instagram.com/altaperspectiva/">
+                    <i class="fa fa-instagram fa-2x">
+                    </i>
+                </a>
             </div>
         </div>
         <div class="footer-right">
-            <div>nostros</div>
-            <div>Terminos de usos</div>
-            <div>Contactenos</div>
+            <div><a href="http://altaperspectiva.com/nosotros">nostros</a> </div>
         </div>
     </div>
 </div>
