--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -4,7 +4,7 @@
         <form (ngSubmit)="submitQuestion()" #questionVM="ngForm" class="z-header" role="form" id="search-panel">
             <div class="icon-container">
                 <input type="text" class="search-input fixed-height " #searchText placeholder="Haz tu pregunta aquí o busca tus preguntas aquí" id="title" autocomplete="off" (click)="showModal()"
-                       [(ngModel)]="title" required name="titleName" #titleName="ngModel" (keydown)=filterQuestions($event) />
+                       [(ngModel)]="title" required name="titleName" #titleName="ngModel" (keypress)="trimSpace($event)" (keydown)=filterQuestions($event) />
                 <div [hidden]="!showQuestion" class="question-begin">¿</div>
                 <div [hidden]="!showQuestion" class="question-end" id="question-end">?</div>
                 <div id="temp-text" style="position:absolute;top:-100px;">{{title}}</div>
