Question header added in answer panel

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -32,6 +32,7 @@
 </style>
 <form #answerVM="ngForm" class="form-horizontal " role="form">
     <div class="modal-header">
+        <question-header [question]="question"></question-header>
         <h1>{{question.title}}</h1>
         <div class="row">
             <div class="img-container" *ngIf="!isAnonymous">
