Upload profile image UI fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/preview-image.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/preview-image.component.html
@@ -11,6 +11,7 @@
         margin: 0px;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
+        text-align:center;
     }
 
         .profile-modal-body input {
@@ -25,7 +26,9 @@
         .profile-modal-body a:hover {
             text-decoration: underline;
         }
-
+        canvas{
+            margin:15px;
+        }
     .profile-modal-button-container {
         text-align: right;
     }
