--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -8,7 +8,7 @@
     <div class="status-line like-border "></div>
     <div class="status-line number-box status-line hidden-xs">{{questionObj?.viewCount?questionObj?.viewCount:0}}</div>
     <div class="status-line hidden-xs">Leidos</div>
-    {{likedUsers?.length}} 
+    {{likedUsers?.length}}
     <div class="number-box status-line">
         {{CommentCount}}
     </div>
@@ -29,26 +29,11 @@
            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
             <img class="social-image" id="img2" src="../images/twitter.png" />
         </a>
-        <div class="other-function" id="img3">
-            <a [popover]="externalPop">
-                <img class="external-img" src="../images/icon-external-link.png" />
-            </a>
-            <popover-content #externalPop
-                             placement="top"
-                             [closeOnClickOutside]="true">
-                <ul style="list-style-type: none;">
-                    <li style="list-style-type: none;width: 100px;">
-                        <i class="fa fa-linkedin-square"></i>
-                        <a href="http://www.linkedin.com/shareArticle?mini=true&url={{questionObj.shareUrl}}&title={{questionObj?.title}}&summary={{answerTagsRemoved}}"
-                           onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">Linkedin</a>
-                    </li>
-                    <li style="list-style-type: none;">
-                        <i class="fa fa-share-square"></i>
-                        <a (click)="postClikced(questionObj?.id)">Post</a>
-                    </li>
-                </ul>
-            </popover-content>
-        </div>
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url={{questionObj.shareUrl}}&title={{questionObj?.title}}&summary={{answerTagsRemoved}}"
+           onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
+            <img class="social-image" id="img3" src="../images/linkedin.png" />
+        </a>
+
         <div class="other-function" id="img4">
             <a [popover]="otherFunctionPop">...</a>
             <popover-content #otherFunctionPop
@@ -65,7 +50,9 @@
                     <li style="list-style-type: none;">
                         <a (click)="questionReportClicked(questionObj?.id,answerObj?.id)">Report</a>
                     </li>
-
+                    <li style="list-style-type: none;">
+                        <a (click)="postClikced(questionObj?.id)">Post</a>
+                    </li>
                 </ul>
             </popover-content>
         </div>
