--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -51,7 +51,7 @@
                     <div class="user-detail">
                         {{userInfoDetails?.fullName}}
                         <br />
-                        <span style="font-size: 12px;"> {{userInfoDetails?.title}}</span>
+                        <div style="font-size: 12px;"> {{userInfoDetails?.title}}</div>
                     </div>
                 </div>
             </li>
