--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/following/following.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/following/following.component.html
@@ -1,4 +1,4 @@
-﻿<div class="row">
+﻿<div class="row row-fix">
     <div class="col-md-4" *ngFor="let usr of user">
         <user-info [userObj]="usr"></user-info>
     </div>
