--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
@@ -8,6 +8,9 @@
     overflow: hidden;
     top:0;
 }
+    .form-horizontal {
+        margin-left: 17px;
+    }
 
 </style>
 <div class="background-img z-header">
